admin is able to post blog posts. NewBlogPost, NewBlogPostContainer, NewBlogPostForm components created. storeUploadedImage.js and postNewBlogPost.js in api folder created. getCurrentDate.js and getCurrentTimeAndDate.js in utils folder created

--- a/src/index.css
+++ b/src/index.css
@@ -412,6 +412,10 @@ main {
   color: #fff;
 }
 
+/* NewBlogPostForm component */
+.new-blog-post-form form{
+  box-shadow: var(--light-dark-shadow);
+}
 
 /* ERROR PAGE */
 .error {
