--- a/src/index.css
+++ b/src/index.css
@@ -427,15 +427,19 @@ main {
   height: 220px;
 }
 
-/* BLOG PAGE and SELECTED BLOG POST PAGE */
-.blog-page .blog-post-card,
-.selected-blog-post-page .container {
+/* BLOG PAGE */
+.blog-page .blog-post-card {
   box-shadow: var(--light-dark-shadow);
 }
 
 /* SELECTED BLOG POST PAGE */
 .selected-blog-post-page p {
   text-align: justify;
+}
+
+/* SelectedBlogPostContent component */
+.selected-blog-post-content{
+  box-shadow: var(--light-dark-shadow);
 }
 
 /* ERROR PAGE */
